feat(): server folder was edited. HTML and CSS files were created

--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "ca ts-13 first server",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "json-server --watch --port 5000 ./db.json"
   },
   "author": "Viktorija Verbickaite",
   "license": "MIT",
